Implement Register API
